# claude-usage-dashboard

./: .env.example  .gitignore  README.md  github-issue-split.md  package-lock.json  package.json  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: 2026-05-24-tauri-mac-app-design.md  2026-05-24-tauri-mac-app-handoff.md  2026-05-24-tauri-mac-app-plan.md  article-cache-ttl-finding.md
docs/superpowers/plans/: 2026-05-03-claude-usage-dashboard-v1.md  2026-05-19-forecast-day-actuals.md
docs/superpowers/specs/: 2026-05-03-claude-usage-dashboard-design.md  2026-05-19-forecast-day-actuals-design.md
scripts/: generate-latest-json.mjs  prepare-server-deps.mjs  prepare-sidecar.mjs  sign-native-addons.sh
server/: package.json
server/src/: config.ts  index.ts  pricing.ts  types.ts
server/src/api/: server.ts
server/src/db/: connection.ts  schema.ts
server/src/git/: gitStats.ts
server/tests/: api.test.ts  cacheTtl.test.ts  config.test.ts  forecastDay.test.ts  forecastDayApi.test.ts  oauthCredentials.test.ts  oauthUsage.test.ts  parser.test.ts  pricing.test.ts  queries.test.ts  scanner.test.ts  statusline.test.ts  subagent.test.ts  weeklyProjection.test.ts
src-tauri/: Cargo.toml  entitlements.plist  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  sidecar.rs  splash.rs
web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/tests/: format.test.ts
(+146 files in other folders)
