[package]
name = "claude-usage-dashboard"
version = "0.1.0"
description = "Claude Usage Dashboard"
authors = ["Greg Herriott"]
edition = "2021"

[lib]
name = "claude_usage_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
